--- a/public/styles.css
+++ b/public/styles.css
@@ -10,13 +10,17 @@ html, body {
     margin: 0;
     padding: 0;
     
+    
 }
 
 header {
+    display: inline-block;
     height: 10%;
+    width: 100%;
     background-color:  blue;
     color: white;
     text-align: center;
+    vertical-align: middle;
     
 }
 
